--- a/resources/Localizable.xcstrings
+++ b/resources/Localizable.xcstrings
@@ -197,13 +197,13 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "鼠须管"
+            "value" : "Rume"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "鼠鬚管"
+            "value" : "Rume"
           }
         }
       }
